[package]
name = "brainstem"
version = "0.1.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
anyhow = "1.0"
num-traits = "0.2"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
lalrpop = "0.22.1"
